2002-01-06  Christian Stimming  <stimming@tuhh.de>

	* doc/sgml/*/xacc-euro.sgml: Fixed DEM rate as pointed out by
	Gregor Hoffleit <gregor@hoffleit.de>.

2002-01-05  Christian Stimming  <stimming@tuhh.de>

	* src/report/report-system/html-*.scm,
	src/report/stylesheets/stylesheet-*.scm: Added nowrap attribute
	for cells containing numbers.

2002-01-03  Dave Peticolas  <dave@krondo.com>

	* src/backend/postgres/PostgresBackend.c: allow gnucash tables
	to be installed in an existing database.

	* src/backend/postgres/upgrade.c: use pointer<->int conversion
	macros

2001-12-27  Dave Peticolas  <dave@krondo.com>

	* src/backend/postgres/test/test-db.c: expand testing

	* src/engine/Transaction.c: fix bugs. keep positive editlevel
	while committing and rolling back transaction.

2001-12-25  Dave Peticolas  <dave@krondo.com>

	* src/backend/postgres/test/test-db.c: test rollback

	* src/engine/Transaction.c: fix bug in transaction rollback

	* src/engine/test-core/test-engine-stuff.h: add test routine

	* src/engine/test-core/test-engine-stuff.c: add test routine

2001-12-20  Dave Peticolas  <dave@krondo.com>

	* src/scm/main.scm: update for api changes

	* src/report/report-gnome/window-report.h: add new init api

	* src/report/report-gnome/window-report.c: move some report
	initialization here from top-level.c

	* src/report/report-gnome/gncmod-report-gnome.c: call new report
	initialization function

	* src/report/report-gnome/Makefile.am: add app-utils dependency

	* src/gnome/top-level.h: update for api changes

	* src/gnome/top-level.c: remove some gnome initialization &
	shutdown. change ui init api.

	* src/gnome/gw-gnc-spec.scm: update for api changes

	* src/gnome/argv-list-converters.h: remove

	* src/gnome/argv-list-converters.c: remove

	* src/gnome/Makefile.am: remove argv-list-converters.[ch]

	* src/gnome-utils/gw-gnome-utils-spec.scm: g-wrap new funcs

	* src/gnome-utils/gncmod-gnome-utils.c: remove #include cruft
