@@ -679,7 +679,8 @@
     
     table))
 
-(define (gnc:html-make-no-account-warning report-title-string)
+(define (gnc:html-make-no-account-warning
+	 report-title-string report-id)
   (let ((p (gnc:make-html-text)))
     (gnc:html-text-append! 
      p 
@@ -689,9 +690,17 @@
      (gnc:html-markup-h2 (_ "No accounts selected"))
      (gnc:html-markup-p
       (_ "This report requires accounts to be selected.")))
+    (if report-id
+	(gnc:html-text-append! 
+	 p 
+	 (gnc:html-markup-p
+	  (gnc:html-markup-anchor
+	   (sprintf #f "gnc-options:report-id=%a" report-id)
+	   (_ "Edit report options")))))
     p))
 
-(define (gnc:html-make-empty-data-warning report-title-string)
+(define (gnc:html-make-empty-data-warning 
+	 report-title-string report-id)
   (let ((p (gnc:make-html-text)))
     (gnc:html-text-append! 
      p 
@@ -700,4 +709,11 @@
      (gnc:html-markup-h2 (_ "No data"))
      (gnc:html-markup-p
       (_ "The selected accounts contain no data/transactions (or only zeroes) for the selected time period")))
+    (if report-id
+	(gnc:html-text-append! 
+	 p 
+	 (gnc:html-markup-p
+	  (gnc:html-markup-anchor
+	   (sprintf #f "gnc-options:report-id=%a" report-id)
+	   (_ "Edit report options")))))
     p))
