@@ -205,7 +205,8 @@
         ;; error condition: no accounts specified
         (gnc:html-document-add-object! 
          doc 
-         (gnc:html-make-no-account-warning report-title)))
+         (gnc:html-make-no-account-warning 
+	  report-title (gnc:report-id report-obj))))
 
     doc))
 
