@@ -356,7 +356,9 @@
         ;; error condition: no accounts specified
         
         (gnc:html-document-add-object! 
-         doc (gnc:html-make-no-account-warning (_ "Balance Sheet"))))
+         doc 
+         (gnc:html-make-no-account-warning 
+	  (_ "Balance Sheet") (gnc:report-id report-obj))))
     doc))
 
 (gnc:define-report 
