@@ -342,12 +342,14 @@
            (gnc:html-document-add-object! document chart) 
            (gnc:html-document-add-object!
             document
-            (gnc:html-make-empty-data-warning report-title))))
+            (gnc:html-make-empty-data-warning
+	     report-title (gnc:report-id report-obj)))))
      
      ;; else no accounts selected
      (gnc:html-document-add-object!
       document
-      (gnc:html-make-no-account-warning report-title)))
+      (gnc:html-make-no-account-warning 
+       report-title (gnc:report-id report-obj))))
     
     document))
 
