@@ -225,8 +225,9 @@
 
                                         ;if no accounts selected.
         (gnc:html-document-add-object!
-         document (gnc:html-make-no-account-warning report-title)))
-    
+         document
+	 (gnc:html-make-no-account-warning 
+	  report-title (gnc:report-id report-obj))))
     
     document))
 
